@@ -9,6 +9,7 @@ Version 4.xxxxx (xxx 2019)
 - Fixed: GUI, device table initial order column
 - Fixed: GUI, Switch Log, date parsing in device log (#3206)
 - Fixed: GUI, Floorplan, contact type can no longer be switch
+- Fixed: GUI, Floorplan, custom image for Custom Sensor
 - Fixed: GUI, Floorplan, fixed blind switching (#3267)
 - Fixed: GUI, Weight Log now displays correct Unit (#3211)
 - Fixed: GUI, OpenZWave Abort Include/Exclude button
